# rope

./: .flake8  .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  auth.py  db.py  main.py  requirements.txt  sessions.py  settings.py  setup.cfg
backend/api/: auth.py  database.py  main.py  models.py  sessions.py  settings.py  utils.py
backend/api/processors/: course_build_processor.py
backend/api/routers/: admin.py  moodle.py  session.py  user.py
backend/db/: schema.py
backend/migrations/: env.py
backend/migrations/versions/: 0440ac1e89a1_create_coursebuild_model.py  088ef8066747_update_coursebuildstatus_enum_subclass.py  2af7bbeaa160_create_coursebuild_model.py  3ab38446596e_create_user_model.py  53c35d1a2408_create_coursebuild_model.py  7f254b9daa12_create_schooldistrict_model.py  8136a365e462_update_course_category_to_course_.py  890a6b56f838_create_coursebuild_model.py  a53a637efa34_create_useraccount_model.py  aa205c6ae88f_create_moodlesetting_model.py  ece1292c9bdc_update_column_names.py  f92a559349ff_create_useraccount_model.py
backend/scripts/: inject_course_build_sqs.py  update_course_build_status.py
backend/tests/: conftest.py  test_course_build_processor.py  test_endpoints.py  test_endpoints_admin.py  test_endpoints_moodle.py  test_endpoints_session.py  test_endpoints_user.py  test_exceptions.py  test_exceptions_admin.py  test_exceptions_moodle.py  test_exceptions_session.py  test_exceptions_user.py  test_inject_course_build.py  test_update_course_build_status.py
deploy/buildspec/: build-api.yml  build-app.yml  deploy.yml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: api-deployment.yaml  api-ingressroute.yaml  api-service.yaml  app-deployment.yaml  app-ingressroute.yaml  config.yaml  (+5 more)
deploy/k8s/: rope-sa.yaml
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+36 files in other folders)
