[metadata]
name = rope
version = 0.0.1

[options]
package_dir =
    rope.api = api
    rope.db = db

install_requires =
    fastapi==0.109.0
    itsdangerous==2.1.2
    google-auth==2.27.0
    requests==2.31.0
    alembic==1.13.1
    SQLAlchemy==2.0.25
    psycopg2==2.9.9
    uvicorn[standard]==0.26.0
    moodle-cli@git+https://github.com/openstax/raise-moodlecli@d921b33
    boto3==1.34.23

[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-mock
    pytest-cov
