[metadata]
name = rope
version = 0.0.1

[options]
package_dir =
    rope.api = api
    rope.db = db

install_requires =
    fastapi==0.111.0
    itsdangerous==2.2.0
    google-auth==2.29.0
    requests==2.31.0
    alembic==1.13.1
    SQLAlchemy==2.0.29
    psycopg2==2.9.9
    uvicorn[standard]==0.29.0
    moodle-cli@git+https://github.com/openstax/raise-moodlecli@bb8c6e4
    boto3==1.34.95

[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-mock
    pytest-cov

[options.entry_points]
console_scripts =
    rope-course-processor = rope.api.processors.course_build_processor:main
