[metadata]
name = rope
version = 0.0.1

[options]
package_dir =
    rope.api = api
    rope.db = db
    rope.scripts = scripts

install_requires =
    fastapi==0.111.1
    itsdangerous==2.2.0
    google-auth==2.32.0
    requests==2.32.3
    alembic==1.13.2
    SQLAlchemy==2.0.31
    psycopg2==2.9.9
    uvicorn[standard]==0.30.3
    moodle-cli@git+https://github.com/openstax/raise-moodlecli@04ba3aa
    boto3==1.34.146

[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-mock
    pytest-cov

[options.entry_points]
console_scripts =
    rope-course-processor = rope.api.processors.course_build_processor:main
    update-course-build-status = rope.scripts.update_course_build_status:main
